Improved code
- Fixed maven issues
- Added 1.8 support
- Improved code
- Improved events
- Fixed issues at tab auto completer
- Fixed json compatibility
- Removed some unneccessary codes
- Added 'to-do's
- Changed some messages